--- a/browser/components/filter/filter.html
+++ b/browser/components/filter/filter.html
@@ -1,7 +1,7 @@
 <div class="filter-container">
 	{{title}}
 	<div class="buffer local">
-		<button ng-repeat="letter in alphabet" ng-disabled="!activeLetters[letter]" ng-click="getItems({letter:letter})">{{letter}}</button>
+		<button class="btn btn-primary" ng-repeat="letter in alphabet" ng-disabled="!activeLetters[letter]" ng-click="getItems({letter:letter})">{{letter}}</button>
 	</div>
 	<div>
 		<ul>
